2003-12-02  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (sum_gaussian), (make_shadow), (root_tile),
	(paint_all), (map_win), (unmap_win), (determine_mode),
	(configure_win), (circulate_win), (main):
	Track whether cliplists have changed and avoid computation when not.
	Shrink shadows.
	Speed up shadow construction a bit by using memset.
	Eliminate useless INTERVAL code.
	Use XSync after paint_all to gather more events per update.

2003-11-24  Matthew Hawn <hawnpawn@yahoo.com>

	reviewed by: Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (map_win), (unmap_win), (get_trans_prop),
	(determine_mode), (add_win), (main):
	Add support for CM_TRANSLUCENT property.

2003-11-23  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (make_shadow), (root_tile), (win_extents),
	(border_size), (paint_all), (repair_win), (map_win), (unmap_win),
	(add_win), (restack_win), (configure_win), (circulate_win),
	(destroy_win), (ev_serial), (ev_name), (ev_window), (main):
	
	Rename gussianMap to gaussianMap (who the heck is gus?)
	Allow for other names for the root pixmap
	Handle non-zero border widths better (need Composite change
	to display them though).
	Add MONITOR_UPDATE mode that eliminates double buffering and
	blanks the screen to make sequence of update operations visible.
	Leave damage object around to catch map damage right.
	Add CirculateNotify support.

2003-11-23  Eric Anholt  <anholt@FreeBSD.org>

	* xcompmgr.c: (border_size), (paint_all), (add_damage),
	(repair_win), (configure_win):
	Fix for latest Xfixes changes.

	Submitted by: <stephan@wilkogazu.nl>

2003-11-19  Carl Worth  <cworth@isi.edu>

	* xcompmgr.c: Eliminate several compiler warnings: missing
	includes, static functions, unused variables.  Remove confusing
	informational messages with the word "error" in them.

2003-11-14  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (main):
	Eliminate all delays in updates; let the X server scheduling
	handle things.
