@@ -1,0 +1,4 @@
+bin_PROGRAMS = xcompmgr
+
+xcompmgr_LDADD = @XCOMPMGR_LIBS@ -lm
+xcompmgr_INCLUDES = @XCOMPMGR_CFLAGS@
