@@ -1,3 +1,10 @@
+2004-03-25  Philip Blundell  <philb@gnu.org>
+
+	Autotoolized:
+	* Makefile.am, configure.ac: New files.
+	* NEWS, README, AUTHORS: Likewise.
+	* Makefile: Deleted.
+
 2003-12-02  Keith Packard  <keithp@keithp.com>
 
 	* xcompmgr.c: (sum_gaussian), (make_shadow), (root_tile),
